manifests/workloads/ipinfo.tw/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: ipinfo
  name: ipinfo
