manifests/workloads/ipinfo.tw/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: whatismyip
  name: whatismyip
spec:
  progressDeadlineSeconds: 30
  replicas: 2
  selector:
    matchLabels:
      run: whatismyip
  strategy:
    rollingUpdate:
      maxUnavailable: 33%
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: whatismyip
    spec:
      containers:
      - image: ghcr.io/danmanners/ipinfo.tw:2022jan19
        imagePullPolicy: Always
        name: whatismyip
        resources:
          limits:
            cpu: "1"
            memory: 250Mi
          requests:
            cpu: 500m
            memory: 96Mi
        ports:
        - containerPort: 8080
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 3
