manifests/workloads/ipinfo.tw/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whatismyip-danmanners-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: whatismyip.danmanners.com
    external-dns.alpha.kubernetes.io/ttl: "300"
  labels:
    app.kubernetes.io/instance: whatismyip
spec:
  type: ExternalName
  externalName: kube.danmanners.com
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  name: whatismyip
  labels:
    run: whatismyip
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 8080
    protocol: TCP
  selector:
    run: whatismyip
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whatismyip-danmanners-cert-web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whatismyip.danmanners.com`)
      kind: Rule
      services:
        - name: whatismyip
          port: 8080
      middlewares:
        - name: http-https-redirectscheme
          namespace: kube-system
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whatismyip-danmanners-cert-websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whatismyip.danmanners.com`)
      kind: Rule
      services:
        - name: whatismyip
          port: 8080
  tls:
    secretName: whatismyip-danmanners-cert
